[project]
name = "f3-nation-test-utils"
description = "utilities to assist with testing in the F3 Nation ecosystem"
authors = [{ name = "f3-noho" }]
readme = "README.md"
license = 'MIT'
requires-python = ">=3.11"
dynamic = ["version"]

dependencies = [
  "pymysql>=1.1.1",
  "sqlalchemy>=2.0.43",
]

[dependency-groups]
dev = [
  "poethepoet>=0.37.0",
  "tbelt>=0.0.2",
  "pytest>=8.0.0",
  "pytest-mock>=3.12.0",
  "pytest-cov>=4.0.0",
]

[tool.hatch]
build.packages = ["f3_nation_test_utils"]
metadata.allow-direct-references = true

[tool.hatch.version]
path = 'f3_nation_test_utils/version.py'

[tool]
toolbelt.include = ["@toolbelt:resources/presets/hdw.yaml"]
poe.include = ["configs/tasks.toml"]
ruff.extend = "configs/ruff.toml"
pyright.typeCheckingMode = "standard"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
